--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 <body>
   <div class="page">
     @include('partials/header.html')
+    @include('partials/sideMenu.html')
+    @include('partials/sideRegister.html')
     <main class="main">
       @include('partials/banner.html')
       @include('partials/service.html')
